tdf#138779 do not call EndRun() in StartRuby()

and EndRuby(). Ruby is implemented as EQ field in RTF.
The original run text become the ruby base text in this
case. Calling EndRun() in StartRuby() might cause the
run completed early and text attributes that hasn't be
processed mistakenly applied to next run. This patch
close the in EQ field command in EndRun, in case StartRuby
has already inserted EQ field command.

Change-Id: I3a755f235b79d11b7897f85ae3989cc3ac73b06a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/108194
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>
(cherry picked from commit 326388da4e40c85f8a1af40264aaf56c7845e224)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/108343
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>